style.css
/* ... */
::selection {
  background-color: var(--color-green);
  color: var(--color-green-light);
}

:focus-visible {
  outline: 3px solid orange;
  transition: outline 0.2s ease;
  border-radius: inherit;
}

html {
  font-size: var(--font-size);
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  font-family: var(--font);
  scrollbar-color: var(--color-purple) var(--color-purple);
  scrollbar-width: thin;
  caret-color: orange;
}

body {
  background-color: var(--color-black);
  color: var(--color-white);
  line-height: 1.6;
  padding: 0;
  margin: 0.5rem;
}

header {
  background-color: black;
  box-shadow: 0px 10px 10px rgba(0, 0, 0, 0.9);
  padding: 5px 0 0 0;
  width: calc(100%);
  position: fixed;
  top: 0;
  left: 0;
  right: 0;
  box-sizing: border-box;
  z-index: 5;
}

/* TITLE BAR */

nav#site-title-bar {
  background: linear-gradient(
    to right,
    transparent,
    var(--color-purple) 1.5%,
    var(--color-purple),
    transparent
  );
  border-radius: 0px 200px 200px 0px;
  /* border-right: 8px white solid; */
  user-select: none;
  margin-right: 10px;

  a {
    line-height: 1;
    color: hsl(0, 0%, 90%);
    display: flex;
    align-items: center;
    text-decoration: none;
    font-size: 2rem;
    letter-spacing: 0.05em;
  }

  img {
    height: 1.5rem;
    margin: 0.5rem 0.8rem 0.5rem 1.3rem;
    border-radius: 10px;
  }

  &:hover,
  &:focus-visible {
    background: linear-gradient(
      to right,
      transparent,
      var(--color-purple-hover) 1.5%,
      var(--color-purple-hover),
      transparent
    );

    a {
      color: hsl(0, 0%, 100%);
    }
  }
}

nav#site-title-bar:hover::after {
  content: "";
  position: absolute;
  left: 10px;
  bottom: 52.5px;
  width: 100%;
  height: 20px;
  background: radial-gradient(
    ellipse 100% 80% at 20% 0,
    hsla(var(--color-purple-hover-a), 1) 0%,
    transparent 70%
  );
  pointer-events: none;
  z-index: 5;
}
nav#site-title-bar:hover::before {
  content: "";
  position: absolute;
  left: 0px;
  top: 70px;
  width: 100%;
  height: 30px;
  background: linear-gradient(
    to right,
    black,
    hsl(var(--color-gray-900-a), 0.9),
    hsl(var(--color-gray-800-a), 0.5) 1.4%,
    transparent 2%
  );
  pointer-events: none;
  z-index: 7;
}

/* BREADCURMBS */

nav#breadcrumbs {
  background: linear-gradient(
    to right,
    transparent,
    var(--color-gray-800) 1.5%,
    var(--color-gray-850) 70%,
    transparent
  );

  margin-top: 5px;
  padding: 3px 4px 3px 1.35rem;
  line-height: 1.2;
  color: hsl(0, 0%, 50%);
  font-size: 0.8rem;

  a {
    color: hsl(0, 0%, 50%);
    text-decoration: none;
    font-size: 0.8rem;

    &:last-of-type {
      color: hsl(0, 0%, 80%);
    }

    &:hover,
    &:focus-visible {
      color: hsl(0, 0%, 100%);
      text-decoration: underline;
    }
  }
}

/* DROPDOWN */

nav#dropdown-menu {
  background: linear-gradient(
    to right,
    var(--color-gray-700),
    var(--color-gray-800)
  );
  margin: 5px 10px 0 10px;
  border-radius: 25px;

  a {
    color: hsl(0, 0%, 90%);
    text-decoration: none;
    display: block;
    height: 100%;
    padding-left: 2.65rem;
  }

  ul {
    list-style: none;
    display: flex;
    justify-content: space-between;
    padding: 0;
    margin: 0;
  }

  li.dropdown-category {
    border-radius: 25px;
    flex: 1;
    text-align: left;
    font-size: 1rem;
    border-right: 5px solid transparent;
    border-left: 0.5px transparent;
    position: relative;
    user-select: none;

    &::after {
      content: "";
      position: absolute;
      top: 100%;
      left: 0;
      height: 5px;
      width: 100%;
      z-index: 1;
    }

    &::before {
      content: "▶";
      position: absolute;
      left: 1rem;
      right: auto;
      top: 55%;
      transform: translateY(-50%);
      font-size: 0.7rem;
      transition: transform 0.3s ease;
    }

    &:hover,
    &:focus-within {
      cursor: pointer;
      border-radius: 25px;
      border-right: 5px white solid;
      border-left: var(--glass-border);
      background: linear-gradient(
        to right,
        var(--color-purple-hover),
        rgba(0, 0, 0)
      );

      > ul {
        display: block;
      }

      &:before {
        transform: translateY(-50%) rotate(90deg);
      }
    }
  }
}

nav#dropdown-menu li.dropdown-category ul {
  display: none;
  margin-top: 5px;
  position: absolute;
  width: 100%;
  top: 100%;
  left: 0;
  padding: 10px 0 10px 10px;
  border-radius: 10px 10px 10px 10px;
  background: radial-gradient(
    ellipse 200% 100% at top left,
    hsl(var(--color-purple-a), 0.4),
    hsla(var(--color-gray-800-a), 0),
    hsla(var(--color-gray-800-a), 0)
  );
  box-shadow: 20px 30px 20px rgba(10, 10, 10, 0.6);
  border: var(--glass-border);
  backdrop-filter: blur(10px);

  li {
    border-radius: 5px;

    &:hover {
      background: linear-gradient(
        to right,
        var(--color-purple-hover),
        rgba(0, 0, 0, 0)
      );
    }
    & a {
      color: var(--color-white);
    }

    a:focus-visible {
      background: linear-gradient(
        to right,
        var(--color-purple-hover),
        rgba(0, 0, 0, 0)
      );
    }

    /* &:last-of-type {
      border-radius: 5px 5px 10px 10px;
    }
    &:first-of-type {
      border-radius: 10px 10px 5px 5px;
    } */
  }

  a {
    padding-left: 0.5rem;
  }
}

main {
  display: flex;
  flex-direction: row;
  gap: 0.5rem;
  min-height: min-content;
}

aside {
  flex: 2.5;
  display: flex;
  flex-direction: column;
}
/* ... */

